# macro_regime_project

./: .gitignore  QUICKSTART.md  README.md  SETUP.md  exploratory_analysis.ipynb  pyproject.toml  requirements.txt
data/: README.md
data/processed/: annualized_return_by_combined_regime.csv  annualized_return_by_inflation_regime.csv  avg_return_by_combined_regime.csv  inflation_processed.csv  sector_returns_processed.csv  spx_processed.csv  treasury_processed.csv  vix_processed.csv
data/raw/: CPIAUCSL.csv  DGS10.csv  DGS2.csv  FEDFUNDS.csv  SP500.csv  VIXCLS.csv  sector_prices.csv
docs/: README.md  analysis_narrative_draft.md  peer_review.md
notebooks/: 60_build_main_df.ipynb  61_build_panel_df.ipynb  71_heatmap_visualization.ipynb  72_build_panel_df.ipynb  79_drawdown_analysis.ipynb  83_summary_tables.ipynb  85_volatility_comparison.ipynb  explore.ipynb
scripts/: build_master_df.py  build_panel_df.py  build_pivot_tables.py  compute_avg_returns_by_regime.py  ingest_inflation.py  ingest_sectors.py  ingest_spx.py  ingest_treasury.py  ingest_vix.py  migrate_processed_structure.py  process_inflation.py  process_sectors.py  process_spx.py  process_treasury.py  process_vix.py  run_pipeline.py  run_processing.py  validate_merge.py
tests/: test_analysis.py  test_combined_macro_regime.py  test_io.py  test_panel.py  test_pipeline_smoke.py  test_regime_edge_cases.py  test_regime_persistence.py  test_regime_ttest.py  test_regimes.py  test_returns.py  test_sector_ranking_stability.py  test_stats.py  test_visualization.py  test_vix_regime.py  test_volatility.py
(+29 files in other folders)
