[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "macro_regime"
version = "0.1.0"
description = "Regime-based macroeconomic analysis project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
